Fix transparency bug in share image
* Remove background-color transition from invisible images

--- a/css/artists.css
+++ b/css/artists.css
@@ -85,9 +85,12 @@ body {
   width: 85%;
   height: 85%;
   position: relative;
-  transition: background-color .2s;
   border-radius: 20px;
   overflow: hidden;
+}
+
+.visible-image .content {
+  transition: background-color .2s;
 }
 
 .image .stats {
